refactor(queue): remove unnecessary ExecutorService